- improved font declarations (variables & extends) - added base styles for sub & sup
git-svn-id: https://github.com/PANmedia/OnionKnight.git/trunk@34 3254bc33-fd20-d46e-65cb-ce57b7db7bff

--- a/base/snippets.scss
+++ b/base/snippets.scss
@@ -162,7 +162,10 @@
 
 
 // code font
-%codeFont { font-family: "inconsolata", "droid-sans-mono", "Lucida Console", monospace!important; }
+%code-font { font-family: $code-font; }
+
+// heading font
+%heading-font { font-family: $heading-font; }
 
 
 // common padding 
