--- a/base/tags.scss
+++ b/base/tags.scss
@@ -7,8 +7,10 @@
  */
 
 body, html {
+    width: 100%;
     margin: 0;
     padding: 0;
+    font-family: $body-font;
 }
 
 // ensures initial or successive headings will not be spaced too heavily apart
@@ -24,7 +26,7 @@ h1, h2, h3, h4, h5, h6 {
 
 // @todo add your font filenames
 h1, h2, h3, h4 {
-    @extend %FontName;
+    @extend %heading-font;
 }
 
 // h1 & h2 have their bare font information abstracted for use in other modules
@@ -147,6 +149,18 @@ label {
 
 section, article, aside {
     display: block;
+}
+
+sup, sub {
+    font-size: 60%;
+}
+
+sup {
+    vertical-align: super;
+}
+
+sub {
+    vertical-align: sub;
 }
 
 code {
