--- a/base/variables.scss
+++ b/base/variables.scss
@@ -34,7 +34,7 @@ $grid-padding: $gutter-width;
 // sticky footer (entirely optional - for use with compass sticky footer mixin)
 $sticky-footer: 300px;
 
-// typography
+// font-sizes
 $h1-size: 32px;
 $h2-size: 24px;
 $h3-size: 21px;
@@ -43,8 +43,12 @@ $h5-size: 16px;
 $h6-size: 14px;
 $p-size: 14px;
 $small-size: 12px;
+
+// other typography
 $heading-case: uppercase;
-$code-font-stack: "inconsolata", "Consolas", "droid-sans-mono", "Droid Sans Mono", "Monaco", "Lucida Console", monospace;
+$heading-font: Helvetica, Arial, sans-serif;
+$body-font: Helvetica, Arial, sans-serif;
+$code-font: "inconsolata", "Consolas", "droid-sans-mono", "Droid Sans Mono", "Monaco", "Lucida Console", monospace;
 
 // misc
 $border-radius: 0.4em;
