--- a/base/variables.scss
+++ b/base/variables.scss
@@ -21,7 +21,7 @@ $desktop:     12 no-media-queries;
 
 // vertical rhythm
 $base-font-size: 16px;
-$base-line-heigth: 24px;
+$base-line-height: 24px;
 $round-to-nearest-half-line: true;
 @include establish-baseline;
 
