Add pseudo element base styles

--- a/base/elements.scss
+++ b/base/elements.scss
@@ -1,5 +1,5 @@
 /**
- * Any Typography and bare tag styles
+ * Any Typography and bare tag styles.
  *
  * @author Thomas Bredin-Grey <thomas@panmedia.co.nz>
  * @author Hemi Ormsby <hemi@panmedia.co.nz>
