--- a/screen.scss
+++ b/screen.scss
@@ -12,7 +12,8 @@
 @import 'base/variables';
 @import 'base/fonts';
 @import 'base/snippets';
-@import 'base/tags';
+@import 'base/elements';
+@import 'base/elements-pseudo';
 
 @import 'layout/grids';
 @import 'layout/layout-patterns';
