--- a/base/snippets.scss
+++ b/base/snippets.scss
@@ -373,3 +373,25 @@
     }
 }
 
+
+//box shadow emboss top & bottom
+@mixin box-emboss($opacity, $opacity2){
+    box-shadow:white($opacity) 0 1px 0, inset black($opacity2) 0 1px 0;
+}
+
+
+//initialises pan picturefill helper css
+//this is required for responsive images to work (and is included below by default)
+@mixin picture-init($classname: picture) {
+    .#{$classname} {
+        font-family: "0" !important;
+        @include at-breakpoint($medium) {
+            font-family: "#{no-unit($medium-width)}" !important;
+        }
+        @include at-breakpoint($large) {
+            font-family: "#{no-unit($large-width)}" !important;
+        }
+    } 
+}
+
+@include picture-init;
