--- a/base/variables.scss
+++ b/base/variables.scss
@@ -14,10 +14,30 @@ $heading-color: $site-blue;
 $sub-heading-color: $site-blue;
 $link-color: $site-purple;
 
-// responsive grid breakpoints
-$mobile:    $total-columns;
-$tablet:    9 no-media-queries;
-$desktop:     12 no-media-queries;
+//responsive grid breakpoints
+//column numbers
+//for constructing longhand susy layouts inside at-breakpoint mixins
+$small-cols: $total-columns;
+$medium-cols: 9;
+$large-cols: 12;
+
+//function for calculating exact em widths of susy layouts
+@function calc-breakpoint($cols) {
+    // gutters + columns + grid padding
+    @return ($cols - 1) * $gutter-width + $cols * $column-width + 2 * $grid-padding;
+}
+
+//exact widths (as calculated by susy)
+//for constructing longhand susy layouts inside at-breakpoint mixins
+$small-width: calc-breakpoint($small-cols);
+$medium-width: calc-breakpoint($medium-cols);
+$large-width: calc-breakpoint($large-cols);
+
+//susy standard responsive layouts 
+//use as shorthand for your breakpoints 
+$small:     $small-cols no-mediaqueries;
+$medium:    $medium-cols no-mediaqueries;
+$large:     $large-cols no-mediaqueries;
 
 // vertical rhythm
 $base-font-size: 16px;
