--- a/base/snippets.scss
+++ b/base/snippets.scss
@@ -422,3 +422,30 @@
     @include at-breakpoint($medium) { display: none; }
 }
 
+
+// for applying hi-dpi images
+@mixin image-2x($image, $width, $height) {
+  @media (min--moz-device-pixel-ratio: 1.3),
+         (-o-min-device-pixel-ratio: 2.6/2),
+         (-webkit-min-device-pixel-ratio: 1.3),
+         (min-device-pixel-ratio: 1.3),
+         (min-resolution: 1.3dppx) {
+    /* on retina, use image that's scaled by 2 */
+    background-image: url($image);
+    background-size: $width $height;
+  }
+}
+
+
+// center block elements
+%center-block {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+// cross browser rem font sizes 
+@mixin font-size($size: 12 ){
+    font-size: $size + px; //fallback for old browsers
+    font-size: ($size / no-unit($base-font-size)) + rem;
+}
