Tidied up markup for maintainability & moved snippets into own folder

--- a/screen.scss
+++ b/screen.scss
@@ -12,8 +12,7 @@
 
 @import "base/variables",
         "base/fonts",
-        "base/snippets",
-        "base/navigation",
+        "base/snippets/*",
         "base/tags";
 
 @import "layout/grids",
