--- a/base/snippets/navigation.scss
+++ b/base/snippets/navigation.scss
@@ -30,6 +30,13 @@
     .nav__menu--depth-1 > .nav__item { //Select level-1 unordered list direct-child (li) elements.
         position: relative; //Required to set dropdowns to position absolute (while still relative to their parent).
         z-index: $nav__z-index_bottom;       //set z-index higher than banner area
+
+        //DROPDOWN (on-hover)
+        &:hover .nav__menu--depth-2 { //display the dropdown (level-2) on hover
+            position: relative; //Pushes down the other nav links when dropdown is open
+            left: 0;            //Bring back on-screen when needed
+            opacity: 1;         //Show the subnavigation once hovered
+        }
     }
     .nav__link {            //Select all navigation anchors (a) and give them similar styling
         display: block;
@@ -43,27 +50,23 @@
         opacity: 0;         //Hide the subnavigation for hover state animation
         @include animate-this(opacity, 0.5s); //Animate the dropdown
         z-index: $nav__z-index_top;       //set z-index higher than banner area
-    }
-    .nav__menu--depth-2 > .nav__item > .nav__link { //Select dropdown (a) anchor elements.
-        white-space:nowrap; //Stop text wrapping and creating multi-line dropdown items
-        padding: $sub-nav_padding-x $sub-nav_padding-y;  //overrite subnavigation link (a) padding to be slightly greater.
-    }
-    //DROPDOWN (on-hover)
-    .nav__menu--depth-1 > .nav__item:hover .nav__menu--depth-2 { //display the dropdown (level-2) on hover
-        position: relative; //Pushes down the other nav links when dropdown is open
-        left: 0;            //Bring back on-screen when needed
-        opacity: 1;         //Show the subnavigation once hovered
+
+        > .nav__item > .nav__link { //Select dropdown (a) anchor elements.
+            white-space:nowrap; //Stop text wrapping and creating multi-line dropdown items
+            padding: $sub-nav_padding-x $sub-nav_padding-y;  //overrite subnavigation link (a) padding to be slightly greater.
+        }
     }
     //BREAKPOINTS
     @include at-breakpoint($medium) {
         .nav__menu--depth-1 > .nav__item { //Select level-1 unordered list direct-child (li) elements.
             float: left;     //stacks the links in a horizontal line.
+
+            &:hover .nav__menu--depth-2 { //display the dropdown (level-2) on hover
+                position: absolute;
+            }
         }
         .nav__menu--depth-2 {   //level-2 unordered list (ul) element
             padding-top: 10px;  //set some space between the subnav and main navigation
-        }
-        .nav__menu--depth-1 > .nav__item:hover .nav__menu--depth-2 { //display the dropdown (level-2) on hover
-            position: absolute;
         }
     }
  }
@@ -94,11 +97,11 @@
  }
  //SUBNAV MIXIN
  @mixin sub-nav_colors($bg-color: transparent, $text-color: $link-color, $bg-hover-color: transparent, $text-hover-color: $link-color) {
-    .nav__menu--depth-1 > .nav__item:hover .nav__menu--depth-2 > .nav__item > .nav__link {
+    .nav__menu--depth-2 > .nav__item > .nav__link {
         background-color: $bg-color;
         color: $text-color;
     }
-    .nav__menu--depth-1 > .nav__item:hover .nav__menu--depth-2 > .nav__item > .nav__link:hover {
+    .nav__menu--depth-2 > .nav__item > .nav__link:hover {
         background-color: $bg-hover-color;
         color: $text-hover-color;  //specify explicit hover states for subnavigation children
     }
@@ -113,19 +116,15 @@
         text-decoration: none; //remove the underline text decoration
         text-transform: $text-transform; //convert all letters to uppercase
         font-size: $font-size;    //select font-size
-    }
-    //BORDER RADIUS
-    @if $border-radius == false {
-        //do nothing
-    } @else {
-        .nav__link {            //Select all navigation anchors (a) and give them similar styling
+
+        //BORDER RADIUS
+        @if $border-radius !== false {
             @include border-radius($border-radius); //add border radius
         }
     }
+
     //DIVIDER
-    @if $divider == false {
-        //do nothing
-    } @else {
+    @if $divider !== false {
         @include at-breakpoint($medium) {
             .nav__menu--depth-1 > .nav__item > .nav__link { //Select level-1 direct-child (a) anchor elements.
                 border-right: 1px solid $divider; //add border to visually divide the links
