--- a/base/snippets/common.scss
+++ b/base/snippets/common.scss
@@ -263,6 +263,12 @@
 }
 
 
+//single line text overflow extend
+%text-overflow {
+    @include ellipsis;
+}
+
+
 // Sets border-box, as well as width, height, padding and border width, including legacy fallbacks
 @mixin legacy-border-box($width: auto, $height: auto, $padding: 0 0 0 0, $border-width: 0 0 0 0) {
     @extend %border-box;
