--- a/base/snippets/navigation.scss
+++ b/base/snippets/navigation.scss
@@ -26,6 +26,8 @@
 @mixin nav_layout($nav_padding-x, $nav_padding-y: $nav_padding-x, $sub-nav_padding-x: $nav_padding-x, $sub-nav_padding-y: $nav_padding-y) {
     .nav__menu {            // all navigation unordered list (ul) elements.
         @extend %plain-list; //remove the generic list styles (this is the ul tag).
+    }
+    .nav__item {
         font-size: 1em; //reset font size
     }
     .nav__menu--depth-1 > .nav__item { //Select level-1 unordered list direct-child (li) elements.
